# agihousehackathon

./: .env  .gitignore  package-lock.json  package.json
myai/: .env.example  README.md  README_MCP.md  browser_config.json  browser_hooks.py  debug_output.py  example_usage.py  extract_real.py  mcp_restaurant_finder.py  pyproject.toml  simple_test.py  test_browser_use.py  test_extraction.py  test_mcp_direct.py  test_party_size.py  test_query_analyzer.py  test_resy_simple.py  test_single_platform.py  use_mcp_directly.sh
myai/src/myai/: cli_extractor.py  context_engine.py  date_parser.py  direct_browser.py  direct_extract.py  efficient_extractor.py  enhanced_cli_extractor.py  evaluator.py  fallback_data.py  main.py  main_clean.py  preference_urls.py  preferences.py  query_analyzer.py  restaurant_ai.py  restaurant_finder.py  screenshot_extractor.py  search_optimizer.py  simple_browser_task.py  simple_extract.py  simple_search.py  site_optimizations.py  smart_extractor.py  smart_termination.py  universal_extractor.py
public/: background.js
src/: App.css  App.tsx  index.css
