[project]
name = "myai"
version = "0.1.0"
description = ""
authors = [
    {name = "Johnny Hung",email = "hungmasterj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
browser-use = {extras = ["cli"], version = "^0.5.4"}


[tool.poetry]
packages = [{include = "myai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
